# ordered-datagram-c

./: .gitignore  README.md  deps.toml
.github/workflows/: build_linux.yml  build_macos.yml
src/: CMakeLists.txt
src/include/ordered-datagram/: in_logic.h  ordered_datagram.h  out_logic.h  serialize.h
src/lib/: CMakeLists.txt  in_logic.c  ordered.c  out_logic.c  serialize.c
